<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/kebab_profile"
        android:title="@string/option_profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/kebab_about_us"
        android:title="@string/option_about_us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/kebab_log_out"
        android:title="@string/option_log_out"
        app:showAsAction="never"/>
</menu>