...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_title"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorCardContent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/close_dialog_about_us"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/text_size_title_large"/>
            <ImageButton
                android:id="@+id/close_dialog_about_us"
                android:layout_width="wrap_content"
...
