...
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginTop="-75dp"
    >

    <ImageView
        android:id="@+id/itba_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/itba_photo" />
    <TextView
...
