<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context="ar.edu.itba.inge.pab.ui.explore.ExploreFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_explore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include android:id="@+id/empty_explore_card"
        layout="@layout/item_no_elements"/>

    <include android:id="@+id/explore_loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_loading"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>