...
                android:textSize="@dimen/text_size_title_medium"
                android:drawableStart="@drawable/ic_description"
                android:drawablePadding="8dp"
                />

            <TextView
                android:id="@+id/act_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:isScrollContainer="true"
...
