<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context="ar.edu.itba.inge.pab.ui.projects.ProjectsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_projects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include android:id="@+id/empty_projects_card"
        layout="@layout/item_no_elements"/>

    <include android:id="@+id/projects_loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_loading"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/add_margins"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorPrimary"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        android:visibility="gone"/>

</RelativeLayout>